--- a/vignettes/articles/chapter-2.Rmd
+++ b/vignettes/articles/chapter-2.Rmd
@@ -5,7 +5,9 @@ title: "Chapter 2: Exploring longitudinal data on change"
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>"
+  comment = "#>",
+  warning = FALSE,
+  message = FALSE
 )
 ggplot2::theme_set(ggplot2::theme_bw())
 ggplot2::theme_update(
